# boson

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TODO.md  components.json  index.html  main.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: execution.rs  lib.rs  loader.rs  preset.schema.json  route.schema.json  schema.rs  workflow.schema.json
crates/server/: Cargo.toml
crates/server/src/: lib.rs
docs/: LITELLM_IMPLEMENTATION_ASSESSMENT.md  architecture.md  faq.md  operator-integration.md  plugin-sdk.md  privacy-and-data.md  providers.md  release.md  roadmap.md  threat-model.md  vision.md
main/ipc/: chat.js  settings.js  terminal.js  threads.js
main/services/: appSettings.js  chatClient.js  endpoints.js  keychain.js  models.js  store.js  threadStore.js  uuid.js  validation.js
main/settings/: settingsSchema.js
scripts/: dev.js
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: theme-provider.tsx  titlebar.tsx
src/components/ui/: context-menu.tsx  sheet.tsx  tabs.tsx
src/components/widgets/title-bar/: theme-picker.tsx
src/components/workbench/: ai-chat-view.tsx  explorer-view.tsx  open-editors-toolbar.tsx  open-editors-view.tsx  panel-output-view.tsx  terminal-view.tsx  workbench-sidebar-section.tsx
src/editor/: editor-session-context.tsx  monaco-editor-pane.tsx  path-to-language.ts
src/extensions/commands/: command-service.ts
src/extensions/titlebar/: builtin.tsx  index.ts  omnibox.tsx  registry.ts  titlebar-contribution.tsx  titlebar-extension-provider.tsx  titlebar-icons.tsx  types.ts
src/extensions/workbench/: auxiliary-bar.tsx  builtin.tsx  editor-area.tsx  explorer-decorations.ts  index.ts  panel.tsx  primary-sidebar.tsx  registry.ts  status-bar.tsx  types.ts  use-registry-subscription.ts  workbench-icons.tsx  workbench-layout.tsx  workbench-provider.tsx  workbench-state.tsx
src/preload/: preload.js
src/renderer/: App.jsx  index.html  main.jsx  renderer.js  styles.css
src/renderer/components/: AppNavbar.jsx  AppSidebar.jsx  BottomTerminal.jsx  Layout.jsx
src/renderer/components/chat/: ChatInput.jsx  ChatMessage.jsx  ChatMessages.jsx  ChatStatusBar.jsx  ChatView.jsx  NewThreadEmptyState.jsx  prism-init.js
src/renderer/components/settings/: SettingsField.jsx  (+9 more)
src/renderer/public/: theme-init.js
src/renderer/stores/: settingsStore.js
src/workspace/: workspace-context.tsx
ui/: components.json  index.html  package.json  pnpm-lock.yaml
ui/src/: App.tsx  api.ts  index.css
ui/src/app/: main-header.tsx  request-preview-card.tsx  response-card.tsx  route-breadcrumb.ts  use-workspace.ts
ui/src/components/: app-sidebar.tsx  boson-logo.tsx
(+55 files in other folders)
