[package]
name = "routepad-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
notify.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
routepad-core = { path = "../core" }
routepad-server = { path = "../server" }
