[package]
name = "boson-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
notify.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
tracing.workspace = true
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
boson-core = { path = "../core" }

[dev-dependencies]
tempfile = "3"
